charts/ingress_kong_thirdparty.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thirdparty-main
  annotations:
    kubernetes.io/ingress.class: kong
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    konghq.com/plugins: thirdparty-rewrite
    # enable basic auth for these routes
    # konghq.com/plugins: basic-auth-example

spec:
  rules:
    - http:
        paths:
          - path: /api/thirdparty/(thirdpartyRequests.*)
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
          # - path: /api/fspiop/(parties.*)
          #   backend:
          #     serviceName: mojaloop-account-lookup-service
          #     servicePort: 80
          # - path: /api/fspiop/(transactionRequests.*)
          #   backend:
          #     serviceName: mojaloop-transaction-requests-service
          #     servicePort: 80
          # - path: /api/fspiop/(authorizations.*)
          #   backend:
          #     serviceName: mojaloop-transaction-requests-service
          #     servicePort: 80
          # - path: /api/fspiop/(quotes.*)
          #   backend:
          #     serviceName: mojaloop-quoting-service
          #     servicePort: 80
          # - path: /api/fspiop/(transfers.*)
          #   backend:
          #     serviceName: mojaloop-ml-api-adapter-service
          #     servicePort: 80
          # # Example - for testing out rewrite rules
          # # - path: /api/bar/(participants.*)
          # - path: /api/bar
          #   backend:
          #     serviceName: echo
          #     servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thirdparty-health
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: thirdparty-rewrite-health
spec:
  rules:
    - http:
        paths:
          - path: /api/admin/thirdparty-api-adapter/health
            backend:
              serviceName: thirdparty-api-adapter
              servicePort: 3008
