charts/ingress_monitoring.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monitoring
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    # enable basic auth for these routes
    # konghq.com/plugins: monitoring-rewrite
    # note: temporarily disabling for easy access
    # konghq.com/plugins: admin-rewrite, basic-auth-example
spec:
  rules:
    - http:
        paths:
          - path: /monitoring/grafana/(.*)
            backend:
              serviceName: promfana-grafana
              servicePort: 80
          - path: /monitoring/elasticsearch/(.*)
            backend:
              serviceName: elasticsearch-master
              servicePort: 9200
          # - path: /api/admin/account-lookup-service/(.*)
          #   backend:
          #     serviceName: mojaloop-account-lookup-service
          #     servicePort: 80
          # - path: /api/admin/account-lookup-service-admin/(.*)
          #   backend:
          #     serviceName: mojaloop-account-lookup-service-admin
          #     servicePort: 80
          # - path: /api/admin/ml-api-adapter/(.*)
          #   backend:
          #     serviceName: mojaloop-ml-api-adapter-service
          #     servicePort: 80
          # - path: /api/admin/oracle-simulator/(.*)
          #   backend:
          #     serviceName: mojaloop-simulator
          #     servicePort: 80
          # # todo: this isn't currently working
          # # - path: /api/admin/dashboard/(.*)
          # - path: /admin/dashboard
          #   backend:
          #     serviceName: kubernetes-dashboard
          #     servicePort: 443
